# 2024_AvocadoFarm

./: 00.py  2-6_datasets_and_dataloaders_Q.ipynb  202401002_code01.ipynb  20240515_code03.ipynb  20240731_math02.ipynb  20240801_math01.ipynb  20240804_code01.ipynb  20240805_math01.ipynb  20240806_code01.ipynb  20240806_code02.ipynb  20240808_code01.ipynb  20240808_math01.ipynb  20240809_code01.ipynb  20240809_math01.ipynb  20240811_code01.ipynb  20240812_code01.ipynb  20240812_code02.ipynb  20240812_code03.ipynb  20240812_code04.ipynb  20240813_code01.ipynb  20240814_code01.ipynb  20240814_code02.ipynb  20240815_code01.ipynb  20240815_code02.ipynb  20240816_code01.ipynb  20240816_code02.ipynb  20240819_code01.ipynb  20240819_math01.ipynb  20240823_code02_quiz01.ipynb  20240826_code02.ipynb  20240826_code03.ipynb  20240828_code02.ipynb  20240829_code02.ipynb  20240901_code01.ipynb  20240901_code02.ipynb  20240902_code01.ipynb  20240903_code02.ipynb  20240904_code01.ipynb  20240904_torch01_07ActivationFunction.ipynb  20240905_code01.ipynb  (+127 more)
20240813_gradio_test01/: main.py  (+1 more)
2024_gradio/: pyproject.toml
2024_gradio/flagged/: log.csv
2024_numpy/: 20240908_numpy01.ipynb  20240909_numpy01.ipynb  20240912_numpy01.ipynb  20240914_numpy01.ipynb  20240915_numpy01.ipynb  20240917_numpy02.ipynb  20240919_numpy01.ipynb  20240921_numpy01.ipynb  20240921_numpy02.ipynb  20240922_numpy01.ipynb  pyproject.toml
torch_project/: 2-5_what_is_tensor_code01.ipynb  20240823_torch01.ipynb  pyproject.toml
torch_project/torch_project/: 20240824_Mini-Batch Gradient Descent.ipynb
(+133 files in other folders)
