[tool.poetry]
name = "2024-numpy"
version = "0.1.0"
description = "none"  
authors = ["HypedAugust <44738421+HypedAugust@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"
seaborn = "^0.13.2"
tensorboard = "^2.17.0"
torchmetrics = "^1.4.1"
torchinfo = "^1.8.0"
matplotlib = "^3.9.2"
numpy = "^1.24.3"
pandas = "^2.2.2"
torchvision = "^0.19.0"
pytorchsummary = "^1.3.0"